# score

./: .bazelrc  .env  .gitignore  .gitlint  .vsls.json  .yamlfmt  AGENTS.md  BUILD  MODULE.bazel  NOTICE  README.md  dpex.txt  genindex.html  graph  graphql.config.ts  index.html  objects.inv  pyproject.toml  run_all_docs_commands.sh  search.html  searchindex.js  versions  versions.json
.clwb/: .gitignore
.devcontainer/: Dockerfile  README.md  devcontainer.json  initialize_command  initialize_command.cmd
.github/: CODEOWNERS
AlexanderLanin-patch-1/: genindex.html
arsibo_FR_logging/: index.html  objects.inv  searchindex.js
arsibo_fr_guidance/: searchindex.js
aschemmel-tech-patch-1/: index.html  objects.inv  searchindex.js
aschemmel-tech-patch-2/: index.html  searchindex.js
aschemmel-tech-patch-3/: objects.inv
disable_tests/: objects.inv
docs/: BUILD  conf.py  doc8.ini  incremental.py  index.rst  requirements.txt  requirements_lock.txt
docs2/: BUILD  README.md  conf.py  index.rst  test.py
features/: index.html
guidance/: docs-as-code.html  index.html  publishing-gh-pages.html
hoe-jo_adapt_process_metamodel_definition/: searchindex.js
hoe_jo_adapt_docu_structuring/: searchindex.js
hoe_jo_bugfix_layout_needs/: searchindex.js
hoe_jo_bugfix_metamodell_std_req_wp/: searchindex.js
hoe_jo_create_naming_convention_needs/: objects.inv  searchindex.js
hoe_jo_initial_draft_requirement_guidance/: index.html
homepage_add_logo_fix_text_color/: genindex.html  index.html
johannes-esr_git_guidelines/: searchindex.js
johannes-esr_marcom_community/: index.html  searchindex.js
johannes-esr_website-update/: searchindex.js
main/: genindex.html  index.html  metrics.json  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
masc2023_add_changemgt/: objects.inv
masc2023_create_general_concepts/: index.html  objects.inv  searchindex.js
masc2023_update_process_image/: search.html
mb_fr_feo/: index.html  objects.inv  searchindex.js
pahmann_verification_incubator/: index.html  objects.inv  searchindex.js
platform_management_plan/: change_management.html  config_management.html  documentation_management.html  index.html  problem_resolution.html  project_management.html  quality_management.html  release_management.html  requirements_management.html  risk_management.html  safety_management.html  software_development.html  software_verification.html  stakeholder_management.html  tool_management.html
pr-1017/: searchindex.js
pr-1027/: objects.inv  searchindex.js
pr-1043/: index.html  objects.inv  searchindex.js
pr-1044/: searchindex.js
pr-1048/: search.html  searchindex.js
pr-1049/: searchindex.js
pr-1052/: searchindex.js
pr-1056/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1060/: searchindex.js
pr-1062/: searchindex.js
pr-1065/: objects.inv
pr-1066/: index.html  needs.json  objects.inv
pr-1067/: genindex.html  needs.json  objects.inv  search.html  searchindex.js
pr-1068/: index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1069/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1078/: genindex.html  needs.json  search.html  searchindex.js
pr-1093/: needs.json  searchindex.js
pr-1094/: needs.json  objects.inv  searchindex.js
pr-1096/: needs.json  objects.inv  searchindex.js
pr-1098/: needs.json  objects.inv  searchindex.js
pr-1100/: needs.json  searchindex.js
pr-1108/: index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1109/: needs.json  objects.inv  searchindex.js
pr-1115/: needs.json  objects.inv  searchindex.js
pr-1124/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1125/: needs.json  searchindex.js
pr-1133/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1170/: needs.json  objects.inv  searchindex.js
pr-1177/: needs.json
pr-1178/: needs.json
pr-1182/: needs.json  searchindex.js
pr-1186/: genindex.html  needs.json  objects.inv  searchindex.js
pr-1201/: objects.inv  search.html  searchindex.js
pr-1202/: needs.json  objects.inv  searchindex.js
pr-1203/: needs.json  objects.inv  searchindex.js
pr-1209/: genindex.html  needs.json  searchindex.js
pr-1211/: needs.json  objects.inv  search.html  searchindex.js
pr-1224/: needs.json  objects.inv  search.html  searchindex.js
pr-1233/: needs.json
pr-1246/: needs.json  objects.inv  searchindex.js
pr-1258/: index.html  needs.json  objects.inv  searchindex.js
pr-1259/: objects.inv
pr-1281/: needs.json  objects.inv  searchindex.js
pr-1282/: needs.json  objects.inv  searchindex.js
pr-1285/: genindex.html  index.html  needs.json  search.html  searchindex.js
pr-1293/: genindex.html  needs.json  objects.inv  searchindex.js
pr-1298/: needs.json  searchindex.js
pr-1323/: needs.json  objects.inv  searchindex.js
pr-1370/: needs.json  objects.inv  searchindex.js
pr-1373/: needs.json  searchindex.js
pr-160/: objects.inv  searchindex.js
pr-192/: index.html  searchindex.js
pr-206/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pr-219/: genindex.html  search.html  searchindex.js
pr-220/: objects.inv  searchindex.js
pr-222/: searchindex.js
pr-229/: index.html  objects.inv  searchindex.js
pr-270/: genindex.html  search.html  searchindex.js
pr-278/: searchindex.js
pr-287/: index.html
pr-292/: genindex.html  search.html  searchindex.js
pr-294/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pr-295/: index.html
pr-302/: genindex.html  index.html
pr-328/: searchindex.js
pr-329/: index.html  objects.inv  search.html  searchindex.js
pr-334/: index.html
pr-343/: index.html  objects.inv  searchindex.js
pr-362/: searchindex.js
pr-371/: objects.inv
pr-372/: objects.inv  searchindex.js
pr-373/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pr-374/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pr-377/: index.html  (+2 more)
(+35538 files in other folders)
