# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_platform",
    version = "1.0.1",
    compatibility_level = 0,
)

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Additional Python rules provided by aspect, e.g. an improved version of
# `py_binary`. But more importantly, it provides `py_venv`.
bazel_dep(name = "aspect_rules_py", version = "1.4.0")

###############################################################################
#
# Packaging dependencies
#
###############################################################################
bazel_dep(name = "rules_pkg", version = "1.0.1")

###############################################################################
#
# Buildifier dependency
# Provides formatting and linting of Bazel files.
#
###############################################################################
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_lint", version = "1.4.2")

###############################################################################
#
# Java version
#
###############################################################################
bazel_dep(name = "rules_java", version = "8.11.0")

###############################################################################
#
# Misc. dependency
#
###############################################################################

bazel_dep(name = "score_python_basics", version = "0.3.3")

###############################################################################
#
# Checker rule for CopyRight checks/fixes
#
###############################################################################
bazel_dep(name = "score_cr_checker", version = "0.3.1")

###############################################################################
#
# CLI helper rule for CLI help
#
###############################################################################
bazel_dep(name = "score_cli_helper", version = "0.1.1")

###############################################################################
#
# StarPLS LSP server
#
###############################################################################
bazel_dep(name = "score_starpls_lsp", version = "0.1.0")
# Checker rule for CopyRight checks/fixs

bazel_dep(name = "score_docs_as_code", version = "0.4.4")
bazel_dep(name = "score_process", version = "1.0.4")
