# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(name = "score_platform")

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.8.3")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

# Additional Python rules provided by aspect, e.g. an improved version of
# `py_binary`. But more importantly, it provides `py_venv`.
bazel_dep(name = "aspect_rules_py", version = "1.6.6", dev_dependency = True)

###############################################################################
#
# Packaging dependencies
#
###############################################################################
bazel_dep(name = "rules_pkg", version = "1.1.0")

###############################################################################
#
# Buildifier dependency
# Provides formatting and linting of Bazel files.
#
###############################################################################
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_lint", version = "1.5.3", dev_dependency = True)

###############################################################################
#
# Java version
#
###############################################################################
bazel_dep(name = "rules_java", version = "8.15.1")

###############################################################################
#
# Score custom modules loading
#
###############################################################################
bazel_dep(name = "score_tooling", version = "1.1.2")
bazel_dep(name = "score_docs_as_code", version = "4.5.0")
bazel_dep(name = "score_process", version = "1.6.0")

# Due to bazels resolution strategy, the following dependency graph is created:
# score_process@1.5.4 (selected)
#  → score_docs_as_code@4.0.1 (discovered, not selected)
#    → score_process@1.5.3 (discovered, not selected)
#      → score_tooling@1.2.0   ← this requirement sticks, although neither
#                                the old docs-as-code nor the old process module is selected.
single_version_override(
    module_name = "score_tooling",
    version = "1.1.2",
)
